--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -38,4 +38,24 @@
     <url-pattern>/user_servlet</url-pattern>
   </servlet-mapping>
 
+  <servlet>
+    <servlet-name>CategoryServlet</servlet-name>
+    <servlet-class>com.leqiang222.base_online_shop.web.servlet.CategoryServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>CategoryServlet</servlet-name>
+    <url-pattern>/category_servlet</url-pattern>
+  </servlet-mapping>
+
+
+  <servlet>
+    <servlet-name>ProductServlet</servlet-name>
+    <servlet-class>com.leqiang222.base_online_shop.web.servlet.ProductServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>ProductServlet</servlet-name>
+    <url-pattern>/product_servlet</url-pattern>
+  </servlet-mapping>
+
+
 </web-app>
